fix: tabs style & /open-design layout regressions (#80)
* chore: simplify exports

* fix: tabs did not match design

* fix: mobile grid did not wrap

* chore: hide all scrollbars

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,3 +11,11 @@
   @apply font-sans box-border;
   font-size: 16px;
 }
+
+* {
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
